--- a/src/projects.css
+++ b/src/projects.css
@@ -1,6 +1,10 @@
+.projects{
+    margin-top: 5%;
+}
 .cards{
     display: flex;
     justify-content: space-around;
+    margin-top: 5%;
 }
 .card{
     border: solid;
