--- a/src/contactMe.css
+++ b/src/contactMe.css
@@ -19,7 +19,7 @@
 .inputTag{
     height: 30px;
     width: 500px;
-    background-color: #76453B;
+    background-color: #43766C;
     color: #F8FAE5;
     border-color: #F8FAE5;
     padding: 10px;
@@ -28,7 +28,7 @@
 .inputTagMessage{
     height: 150px;
     width: 500px;
-    background-color: #76453B;
+    background-color: #43766C;
     color: #F8FAE5;
     border-color: #F8FAE5;
     padding: 10px;
@@ -38,10 +38,24 @@
     color: #F8FAE5;
     justify-items: baseline !important;
 }
+.inputTagMessage::placeholder{
+    color: #F8FAE5;
+    justify-items: baseline !important;
+    transform: translateY(-50px); 
+}
 .submitButton{
+    margin-top: 2%;
     height: 40px;
     width: 100px;
-
+    background-color: #F8FAE5;
+    color: #76453B;
+    box-shadow: 0px 0px 0px 2px #F8FAE5;
+    transition-duration: 0.3s;
+}
+.submitButton:hover{
+    transition-duration: 0.3s;
+    background-color: #43766C;
+    color:#F8FAE5;
 }
 .button {
     width: 50px;
@@ -93,7 +107,7 @@
   }
   
   .button:hover::before {
-    font-size: 13px;
+    font-size: 15px;
     opacity: 1;
     bottom: unset;
     /* transform: translateY(-30px); */
