--- a/src/landingPage.css
+++ b/src/landingPage.css
@@ -1,91 +1,160 @@
-.container-fluid{
+.container-fluid {
   height: 100%;
   padding: 0;
 }
-.row{
+
+.row {
   margin: 0;
 }
-.landingPage{
-    height: 1000px;
-    position:relative;
+
+.landingPage {
+  height: 1000px;
+  position: relative;
 }
-  .bi{
-    font-size: 50px;
-    padding: 1%;
-  }
-  .intro{
-    text-align: center;
-    background-color: #43766C;
-    color: #F8FAE5;
-    height:95%;
-    padding-top: 10%;
-    background-size: cover;
-    width: 100%;
-  }
-  .image{
-    margin-top: 35%;
-  }
-  .text-first{
-    font-size: 50px;
-    margin-block-start: 0px;
-    margin-block-end: 0px;
-  }
-  .text-second{
-    font-size: 80px;
-    margin-block-start: 0px;
-    margin-block-end: 0px;
-  }
-  .intro text p{
-    margin-block-start: 0px;
-    margin-block-end: 0px;
-  }
-  .nav{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    font-size: 25px;
-    background-color: #43766C;
-    height: 80px;
-    border-color: #F8FAE5;
-    color: #F8FAE5;
-    width: 100%;
-    border-bottom: #76453B;
-    padding-right: 2%;
-  }
-  .nav ul {
-    list-style: none;
-    display: flex;
-    align-items: center;
-    gap: 4rem;
-  }
-.introskills{
-    height: 945px;
-    position:relative;
+
+.bi {
+  font-size: 50px;
+  padding: 1%;
 }
-.nav li{
+
+.intro {
+  text-align: center;
+  background-color: #43766C;
+  color: #F8FAE5;
+  height: 95%;
+  padding-top: 15%;
+  background-size: cover;
+  width: 100%;
+}
+
+.image {
+  margin-top: 35%;
+}
+
+.text-first {
+  font-size: 50px;
+  margin-block-start: 0px;
+  margin-block-end: 0px;
+  animation: fadein 3s;
+  -moz-animation: fadein 3s;
+  -webkit-animation: fadein 3s;
+  -o-animation: fadein 3s;
+}
+
+@keyframes fadein {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes buttonMovement {
+  from {
+    opacity: 0;
+    transform: translateY(300px);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
+
+.text-second {
+  font-size: 80px;
+  margin-block-start: 0px;
+  margin-block-end: 0px;
+  animation: fadein 2s;
+  -moz-animation: fadein 2s;
+  /* Firefox */
+  -webkit-animation: fadein 2s;
+  /* Safari and Chrome */
+  -o-animation: fadein 2s;
+  /* Opera */
+}
+
+.intro text p {
+  margin-block-start: 0px;
+  margin-block-end: 0px;
+}
+
+.nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 25px;
+  background-color: #43766C;
+  height: 80px;
+  border-color: #F8FAE5;
+  color: #F8FAE5;
+  width: 100%;
+  border-bottom: #76453B;
+  padding-right: 2%;
+  border-bottom: 3px solid #F8FAE5;
+}
+
+.nav ul {
+  list-style: none;
+  display: flex;
+  align-items: center;
+  gap: 4rem;
+}
+
+.introskills {
+  height: 945px;
+  position: relative;
+}
+
+.nav li {
   display: flex;
   margin-top: 15px;
 }
-.header{
+
+.nav li:hover {
+  color: #76453B;
+  font-size: larger;
+  transition: 0.2s ease-in-out;
+}
+
+.header {
   position: fixed;
   overflow-y: hidden;
   width: 100%;
+  z-index: 1000;
 }
-.btn-landing-page{
+
+.bi-download{
+  font-size: 20px;
+  margin: 5%;
+}
+
+.btn-landing-page {
   background-color: #F8FAE5 !important;
   color: #76453B;
   height: 50px;
   width: 200px;
   font-size: large;
-  margin-top: 2%;
+  margin: 5%;
   box-shadow: 0px 0px 0px 2px #F8FAE5;
   transition-duration: 0.3s;
+  animation: buttonMovement 3s;
+  -moz-animation: buttonMovement 3s;
+  /* Firefox */
+  -webkit-animation: buttonMovement 3s;
+  /* Safari and Chrome */
+  -o-animation: buttonMovement 3s;
+  /* Opera */
 }
-.btn.btn-landing-page:hover{
+
+.btn.btn-landing-page:hover {
   transition-duration: 0.3s;
-    background-color: #43766C !important;
-    color:#F8FAE5;
+  background-color: #43766C !important;
+  color: #F8FAE5;
 }
+
 .burger {
   position: relative;
   width: 40px;
@@ -130,13 +199,13 @@
   transform: translateY(-100%);
 }
 
-.bi-x{
+.bi-x {
   width: 100%;
   display: flex;
   justify-content: center;
 }
 
-.MuiListItemText-root{
+.MuiListItemText-root {
   justify-content: center;
   display: flex;
 }
@@ -157,7 +226,7 @@
   top: 28px;
   left: 5px;
 } */
-.collapse{
+.collapse {
   height: 150px;
   z-index: 9999;
 }
