--- a/src/landingPage.css
+++ b/src/landingPage.css
@@ -39,6 +39,7 @@
   -moz-animation: fadein 3s;
   -webkit-animation: fadein 3s;
   -o-animation: fadein 3s;
+  padding-top: 6%;
 }
 
 @keyframes fadein {
@@ -63,7 +64,23 @@
   }
 }
 
-.text-second {
+.text-second1 {
+  font-size: 80px;
+  margin-block-start: 0px;
+  margin-block-end: 0px;
+  animation: fadein 2s;
+  -moz-animation: fadein 2s;
+  /* Firefox */
+  -webkit-animation: fadein 2s;
+  /* Safari and Chrome */
+  -o-animation: fadein 2s;
+  /* Opera */
+}
+.text-first-line{
+  text-align: start;
+  align-items: start;
+}
+.text-second2 {
   font-size: 80px;
   margin-block-start: 0px;
   margin-block-end: 0px;
@@ -229,4 +246,30 @@
 .collapse {
   height: 150px;
   z-index: 9999;
+}
+@media screen and (max-width: 600px){
+  .text-first {
+      font-size: 25px;
+  }
+  .text-second1 {
+    font-size: 40px;
+}
+.text-second2 {
+  font-size: 40px;
+}
+.intro{
+  padding-top: 50%;
+}
+.btn-landing-page{
+  height: 35px;
+  width: 150px;
+  font-size: 15px;
+}
+.bi-download{
+  margin:2;
+}
+.burger{
+  width: 35px;
+  height: 25px;
+}
 }
