--- a/src/contactMe.css
+++ b/src/contactMe.css
@@ -2,83 +2,68 @@
     height: 20px;
     width: 20px;
 }
-.bi-linkedIn .bi-github .bi-envelope{
+.bi-linkedin .bi-github .bi-envelope{
     padding-top: 25%;
-    font-size: 50px;
+}
+.label-size{
+  color: #CBE4DE;
+  padding-left: 2%;
+  font-size: 25px;
 }
 .a-tag{
-    color: #F8FAE5 !important;
+    /* color: #F8FAE5 !important; */
+    /* color: #CBE4DE; */
+    font-size: 50px;
+    padding: 3%;
 }
 .a-tag:hover {
-    color: #76453B !important;
+    /* color: #76453B !important; */
     transition-duration: .3s;
   }
 .contactMeCard{
-    padding-top: 3%;
-    text-align: center;
+    /* padding-top: 3%; */
+    text-align
+    : center;
     font-size: 18px;
-    height: 320px;
-    margin-top: 5%;
+    height:400px;
+    /* margin-top: 5%; */
 }
 .contactMe-card-intro{
     padding-top: 2%;
     border: none;   
-    background-color: #43766C !important;
-    height: 320px;
-    color: #F8FAE5 !important;
+    /* background-color: #43766C !important; */
+    /* background-color: #2C3333 !important; */
+    height:400px;
+    /* color: #F8FAE5 !important; */
+    /* color: #CBE4DE; */
 }
-.inputTag{
-    height: 30px;
-    width: 500px;
-    background-color: #43766C;
-    color: #F8FAE5;
-    border-color: #F8FAE5;
-    padding: 10px;
-    margin: 5px;
-}
-.inputTagMessage{
-    height: 150px;
-    width: 500px;
-    background-color: #43766C;
-    color: #F8FAE5;
-    border-color: #F8FAE5;
-    padding: 10px;
-    margin: 5px;
+.contactMe-card-intro h1{
+  /* color: #CBE4DE; */
 }
 ::placeholder{
-    color: #F8FAE5;
+    /* color: #F8FAE5; */
+    color: #CBE4DE;
     justify-items: baseline !important;
 }
 .inputTagMessage::placeholder{
-    color: #F8FAE5;
+    /* color: #F8FAE5; */
+    color: #CBE4DE;
     justify-items: baseline !important;
     transform: translateY(-50px); 
-}
-.submitButton{
-    margin-top: 2%;
-    height: 40px;
-    width: 100px;
-    background-color: #F8FAE5;
-    color: #76453B;
-    box-shadow: 0px 0px 0px 2px #F8FAE5;
-    transition-duration: 0.3s;
-}
-.submitButton:hover{
-    transition-duration: 0.3s;
-    background-color: #43766C;
-    color:#F8FAE5;
 }
 .button {
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    background-color: #76453B;
+    /* background-color: #76453B; */
+    /* background-color: #2E4F4F; */
     border: none;
     font-weight: 600;
     display: flex;
     align-items: center;
     justify-content: center;
-    box-shadow: 0px 0px 0px 2px #F8FAE5;
+    /* box-shadow: 0px 0px 0px 2px #F8FAE5; */
+    box-shadow: 0px 0px 0px 2px #CBE4DE;
     cursor: pointer;
     transition-duration: 0.3s;
     overflow: hidden;
@@ -98,7 +83,8 @@
     width: 140px;
     border-radius: 50px;
     transition-duration: 0.3s;
-    background-color: #43766C;
+    /* background-color: #43766C; */
+    /* background-color:#2C3333 !important; */
     align-items: center;
   }
   
@@ -135,13 +121,15 @@
     justify-content: space-around !important;
   }
   .btn-contact-page {
-    background-color: #F8FAE5 !important;
-    color: #76453B;
+    /* background-color: #F8FAE5 !important; */
+    color: #CBE4DE;
+    /* color: #76453B; */
     height: 50px;
     width: 50px;
     font-size: large;
     margin: 5%;
-    box-shadow: 0px 0px 0px 2px #F8FAE5;
+    /* box-shadow: 0px 0px 0px 2px #F8FAE5; */
+    box-shadow: 0px 0px 0px 2px #CBE4DE;
     transition-duration: 0.3s;
     animation: buttonMovement 3s;
     -moz-animation: buttonMovement 3s;
@@ -163,7 +151,8 @@
     }
   }
   .line4{
-    border-top: 3px solid #F8FAE5;
+    /* border-top: 3px solid #F8FAE5; */
+    border-top: 3px solid #CBE4DE;
     width: 220px;
     display: inline-flex;
     justify-content: center;
@@ -177,6 +166,9 @@
 }
 @media screen and (max-width: 600px){
   .bi-linkedIn .bi-github .bi-envelope{
-      font-size: 30px !important;
+      font-size: 20px !important;
+  }
+  .backontop{
+    padding-top: 10%;
   }
 }
