--- a/src/introduction.css
+++ b/src/introduction.css
@@ -1,8 +1,7 @@
 .card-intro{
  border: none;   
- /* background-color: #F8FAE5 !important;  */
+ /* background-color: #2E4F4F !important;  */
  height: 600px;
- color: #76453B;
  padding-top: 5%;
  border-radius: 0;
  box-shadow: none !important;
@@ -13,12 +12,14 @@
     padding-left: 10%;
     padding-right: 10%;
     text-align: justify;
-    color: #76453B;
+    /* color: #76453B; */
+    /* color: #CBE4DE; */
     font-size: 18px;
 
 }
 .card-intro h1{
-    color: #76453B;
+    /* color: #76453B; */
+    /* color: #CBE4DE; */
 }
 .animate-on-scroll {
     animation: headingMovement 3s;
@@ -51,7 +52,8 @@
 .intro-text{
 }
 .line{
-    border-top: 3px solid #76453B;
+    /* border-top: 3px solid #76453B; */
+    border-top: 3px solid #CBE4DE;
     width: 220px;
     display: inline-flex;
     justify-content: center;
@@ -96,7 +98,7 @@
       transform: translateX(0px);
     }
   }
-  @media screen and (max-width: 600px){
+  @media screen and (max-width: 750px){
     .card-intro{
       padding-top: 20%;
       height: 900px;
