--- a/src/projects.css
+++ b/src/projects.css
@@ -1,5 +1,6 @@
 .projects{
     padding-top: 5%;
+    height: 850px;
 }
 .projects h1{
     animation: headingMovement 3s;
@@ -24,13 +25,17 @@
     -moz-animation: skills 3s;
     -webkit-animation: skills 3s;
     -o-animation: skills 3s;
+    margin: 3%;
 }
-@media screen and (max-width: 600px){
+@media screen and (max-width: 850px){
   .card{
     transform: scale(0.8);
   }
   .card:hover{
     transform: scale(1);
+  }
+  .projects{
+    height: 1200px;
   }
 }
 .content{
@@ -46,18 +51,14 @@
 .textFirst{
     margin-left: 15px !important;
 }
-.cards:hover > .card:not(:hover) {
-    filter: blur(15px) !important;
-    transform: scale(0.9, 0.9);
-    transition: 0.3s ease;
-  }
   .cards .card:hover {
-    transform: scale(1.1, 1.1);
+    transform: scale(1.05, 1.05);
     transition: 0.3s ease;
   }
 
 .line2{
-    border-top: 3px solid #76453B;
+    /* border-top: 3px solid #76453B; */
+    /* border-top: 3px solid #CBE4DE; */
     width: 180px;
     display: inline-flex;
     justify-content: center;
@@ -98,5 +99,10 @@
     to {
       opacity: 1;
       transform: translateX(0px);
+    }
+  }
+  @media screen and (max-width: 600px){
+    .projects{
+      padding-top: 20%;
     }
   }
