--- a/src/landingPage.css
+++ b/src/landingPage.css
@@ -12,25 +12,27 @@
   position: relative;
 }
 
-
 .intro {
   text-align: center;
-  /* background-color: rgb(46, 79, 79); */
-  /* background-color: #2C3333; */
-  /* color: #F8FAE5; */
-  /* color: #CBE4DE; */
   height: 100%;
   padding-top: 15%;
   background-size: cover;
   width: 100%;
+  display: flex;
+  justify-content: space-evenly
 }
 
 .image {
   margin-top: 35%;
 }
 
+.content-block{
+  padding-top: 3%;
+}
+
 .text-first {
   font-size: 50px;
+  text-align: left;
   margin-block-start: 0px;
   margin-block-end: 0px;
   animation: fadein 3s;
@@ -38,6 +40,17 @@
   -webkit-animation: fadein 3s;
   -o-animation: fadein 3s;
   padding-top: 6%;
+}
+
+.coding {
+  height: 400px;
+  width: 400px ;
+  animation: buttonMovement 3s;
+  -moz-animation: buttonMovement 3s;
+  /* Firefox */
+  -webkit-animation: buttonMovement 3s;
+  /* Safari and Chrome */
+  -o-animation: buttonMovement 3s;
 }
 
 @keyframes fadein {
@@ -74,10 +87,12 @@
   -o-animation: fadein 2s;
   /* Opera */
 }
-.text-first-line{
+
+.text-first-line {
   text-align: start;
   align-items: start;
 }
+
 .text-second2 {
   font-size: 80px;
   margin-block-start: 0px;
@@ -101,17 +116,9 @@
   align-items: center;
   justify-content: space-between;
   font-size: 25px;
-  /* background-color: #43766C; */
-  /* background-color: #2C3333; */
   height: 80px;
-  /* border-color: #F8FAE5; */
-  /* border-color: #CBE4DE; */
-  /* color: #F8FAE5; */
-  /* color: #CBE4DE; */
   width: 100%;
   padding-right: 2%;
-  /* border-bottom: 3px solid #F8FAE5; */
-  /* border-bottom: 3px solid #CBE4DE; */
 }
 
 .nav ul {
@@ -129,22 +136,12 @@
 .nav li {
   display: flex;
   margin-top: 15px;
-  /* background-color: #CBE4DE !important; */
-  /* color: #2E4F4F; */
-  /* height: 50px;
-  width: 200px;
-  font-size: large;
-  margin: 5%; */
-  /* box-shadow: 0px 0px 0px 2px #F8FAE5; */
-  
+  scroll-behavior: smooth;
 }
 
 .nav li:hover {
-  /* background-color: #43766C !important; */
-  /* background-color: #CBE4DE !important; */
-  /* color: #F8FAE5; */
-  /* color: #2C3333; */
   justify-content: center;
+  cursor: pointer;
 }
 
 .header {
@@ -154,20 +151,17 @@
   z-index: 1000;
 }
 
-.bi-download{
+.bi-download {
   font-size: 20px;
   margin: 5%;
 }
 
 .btn-landing-page {
-  /* background-color: #F8FAE5 !important; */
-  /* background-color: #CBE4DE !important; */
-  /* color: #0d1717; */
   font-weight: bold;
   height: 50px;
   width: 200px;
   font-size: large;
-  margin: 5%;
+  margin-right: 5%;
   box-shadow: 0px 0px 0px 2px #F8FAE5;
   transition-duration: 0.3s;
   animation: buttonMovement 3s;
@@ -181,10 +175,6 @@
 
 .btn.btn-landing-page:hover {
   transition-duration: 0.3s;
-  /* background-color: #43766C !important; */
-  /* background-color: #2C3333 !important; */
-  /* color: #F8FAE5; */
-  /* color: #CBE4DE; */
 }
 
 .burger {
@@ -248,31 +238,140 @@
   height: 150px;
   z-index: 9999;
 }
-@media screen and (max-width: 600px){
+
+@media screen and (max-width: 650px) {
   .text-first {
-      font-size: 25px;
+    font-size: 25px;
   }
+
   .text-second1 {
     font-size: 40px;
+  }
+
+  .text-second2 {
+    font-size: 40px;
+  }
+
+  .buttons{
+    justify-content: center; 
+    padding-top: 10%
+  }
+
+  .intro {
+    display: grid;
+    padding-top: 30%;
+    height: 600px;
+  }
+  .coding{
+    height: 200px;
+    width: 200px;
+    margin-top: 20%;
+  }
+
+  .btn-landing-page {
+    height: 35px;
+    width: 150px;
+    font-size: 15px;
+    font-weight: 500 !important;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .bi-download {
+    margin: 2;
+    padding: 0;
+  }
+
+  .burger {
+    width: 35px;
+    height: 25px;
+  }
 }
-.text-second2 {
-  font-size: 40px;
+
+@media screen and (max-width: 900px) {
+  .intro {
+    padding-top: 30%;
+  }
+  .content-block{
+    padding-top: 5%;
+  }
+  .coding{
+    height: 200px;
+    width: 200px;
+  }
+
+  .text-first {
+    font-size: 25px;
+  }
+
+  .text-second1 {
+    font-size: 40px;
+  }
+
+  .text-second2 {
+    font-size: 40px;
+  }
+
+  .btn-landing-page {
+    height: 35px;
+    width: 150px;
+    font-size: 15px;
+    font-weight: 500 !important;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .bi-download {
+    margin: 2;
+    padding: 0;
+  }
+
+  .burger {
+    width: 35px;
+    height: 25px;
+  }
 }
-.intro{
-  padding-top: 50%;
-}
-.btn-landing-page{
-  height: 35px;
-  width: 150px;
-  font-size: 15px;
-  font-weight: 500 !important;
-}
-.bi-download{
-  margin:2;
-  padding: 0;
-}
-.burger{
-  width: 35px;
-  height: 25px;
-}
+@media screen and (max-width: 1200px) {
+  .intro {
+    padding-top: 30%;
+  }
+
+  .coding{
+    height: 300px;
+    width: 300px;
+  }
+
+  .text-first {
+    font-size: 30px;
+  }
+
+  .text-second1 {
+    font-size: 50px;
+  }
+
+  .text-second2 {
+    font-size: 50px;
+  }
+
+  .btn-landing-page {
+    height: 35px;
+    width: 150px;
+    font-size: 15px;
+    font-weight: 500 !important;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .bi-download {
+    margin: 2;
+    padding: 0;
+  }
+
+  .burger {
+    width: 35px;
+    height: 25px;
+  }
 }
