--- a/src/projects.css
+++ b/src/projects.css
@@ -1,108 +1,147 @@
-.projects{
-    padding-top: 5%;
-    height: 850px;
+.projects {
+  padding-top: 5%;
+  height: 850px;
 }
-.projects h1{
-    animation: headingMovement 3s;
-    -moz-animation: headingMovement 3s;
-    -webkit-animation: headingMovement 3s;
-    -o-animation: headingMovement 3s;
+
+.projects h1 {
+  animation: headingMovement 3s;
+  -moz-animation: headingMovement 3s;
+  -webkit-animation: headingMovement 3s;
+  -o-animation: headingMovement 3s;
 }
-.cards{
-    display: flex;
-    justify-content: space-around;
-    margin-top: 5%;
+
+.cards {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 5%;
 }
-.card{
-    border: solid;
-    height: 300px;
-    width: 400px;
-    align-items: center;
-    display: inline-flex;
-    text-align: center;
-    justify-content: space-between;
-    animation: skills 3s;
-    -moz-animation: skills 3s;
-    -webkit-animation: skills 3s;
-    -o-animation: skills 3s;
-    margin: 3%;
+
+.details {
+  text-align: justify;
+  padding-top: 10%;
+
 }
-@media screen and (max-width: 850px){
+
+.card {
+  border: solid;
+  height: 500px;
+  width: 400px;
+  align-items: center;
+  display: inline-flex;
+  text-align: center;
+  justify-content: space-between;
+  animation: skills 3s;
+  -moz-animation: skills 3s;
+  -webkit-animation: skills 3s;
+  -o-animation: skills 3s;
+  /* margin: 3%;
+  padding-right: 15%;
+  padding-left: 15%; */
+}
+.cards .card:hover {
+  /* transform: scale(1.05) !important; */
+  transition: 0.3s ease; 
+}
+
+.content {
+  height: 100px;
+  text-align: center;
+  padding: 16px;
+}
+
+.Typography {
+  text-align: center;
+}
+
+.contentFirst {}
+
+.textFirst {
+  margin-left: 15px !important;
+}
+
+.cards .card:hover {
+  /* transform: scale(1.05, 1.05); */
+  transition: 0.3s ease;
+}
+
+.line2 {
+  /* border-top: 3px solid #76453B; */
+  /* border-top: 3px solid #CBE4DE; */
+  width: 180px;
+  display: inline-flex;
+  justify-content: center;
+  animation: lineMovement 3s;
+  -moz-animation: lineMovement 3s;
+  -webkit-animation: lineMovement 3s;
+  -o-animation: lineMovement 3s;
+}
+
+@keyframes headingMovement {
+  from {
+    opacity: 0;
+    /* transform: translateY(-50px); */
+  }
+
+  to {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
+
+@keyframes lineMovement {
+  from {
+    opacity: 0;
+    transform: translateY(50px);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
+
+@keyframes projects {
+  from {
+    opacity: 0;
+    transform: translateX(100px);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateX(0px);
+  }
+}
+
+@media screen and (max-width: 1300px) {
+  .card {
+    transform: scale(0.8);
+  }
+  .projects{
+    height: 1200px !important;
+  }
+}
+
+@media screen and (max-width: 860px) {
   .card{
     transform: scale(0.8);
   }
   .card:hover{
-    transform: scale(1);
+    /* transform: scale(1); */
   }
   .projects{
-    height: 1200px;
-  }
+    height: 1700px !important;
+  } 
 }
-.content{
-    text-align: center;
-    padding: 0px !important;
-}
-.Typography{
-    text-align: center;
-}
-.contentFirst{
 
+@media screen and (max-width: 600px) {
+  .projects {
+    padding-top: 20%;
+    height: 1800px !important;
+  }
+  .card{
+    transform: scale(0.8);
+  }
+  .card:hover{
+    /* transform: scale(1); */
+  }
 }
-.textFirst{
-    margin-left: 15px !important;
-}
-  .cards .card:hover {
-    transform: scale(1.05, 1.05);
-    transition: 0.3s ease;
-  }
-
-.line2{
-    /* border-top: 3px solid #76453B; */
-    /* border-top: 3px solid #CBE4DE; */
-    width: 180px;
-    display: inline-flex;
-    justify-content: center;
-    animation: lineMovement 3s;
-    -moz-animation: lineMovement 3s;
-    -webkit-animation: lineMovement 3s;
-    -o-animation: lineMovement 3s;
-}
-@keyframes headingMovement {
-    from {
-      opacity: 0;
-      transform: translateY(-50px);
-    }
-  
-    to {
-      opacity: 1;
-      transform: translateY(0px);
-    }
-  }
-
-  @keyframes lineMovement {
-    from {
-      opacity: 0;
-      transform: translateY(50px);
-    }
-  
-    to {
-      opacity: 1;
-      transform: translateY(0px);
-    }
-  }
-  @keyframes projects {
-    from {
-      opacity: 0;
-      transform: translateX(100px);
-    }
-  
-    to {
-      opacity: 1;
-      transform: translateX(0px);
-    }
-  }
-  @media screen and (max-width: 600px){
-    .projects{
-      padding-top: 20%;
-    }
-  }
