--- a/src/contactMe.css
+++ b/src/contactMe.css
@@ -11,8 +11,6 @@
   font-size: 25px;
 }
 .a-tag{
-    /* color: #F8FAE5 !important; */
-    /* color: #CBE4DE; */
     font-size: 50px;
     padding: 3%;
 }
@@ -20,36 +18,27 @@
   padding-bottom: 30px;
 }
 .a-tag:hover {
-    /* color: #76453B !important; */
     transition-duration: .3s;
   }
 .contactMeCard{
-    /* padding-top: 3%; */
+    padding-top: 5%;
     text-align
     : center;
     font-size: 18px;
     height:400px;
-    /* margin-top: 5%; */
 }
 .contactMe-card-intro{
     padding-top: 2%;
-    border: none;   
-    /* background-color: #43766C !important; */
-    /* background-color: #2C3333 !important; */
+    border: none;
     height:400px;
-    /* color: #F8FAE5 !important; */
-    /* color: #CBE4DE; */
 }
 .contactMe-card-intro h1{
-  /* color: #CBE4DE; */
 }
 ::placeholder{
-    /* color: #F8FAE5; */
     color: #CBE4DE;
     justify-items: baseline !important;
 }
 .inputTagMessage::placeholder{
-    /* color: #F8FAE5; */
     color: #CBE4DE;
     justify-items: baseline !important;
     transform: translateY(-50px); 
@@ -58,14 +47,11 @@
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    /* background-color: #76453B; */
-    /* background-color: #2E4F4F; */
     border: none;
     font-weight: 600;
     display: flex;
     align-items: center;
     justify-content: center;
-    /* box-shadow: 0px 0px 0px 2px #F8FAE5; */
     box-shadow: 0px 0px 0px 2px #CBE4DE;
     cursor: pointer;
     transition-duration: 0.3s;
@@ -86,13 +72,10 @@
     width: 140px;
     border-radius: 50px;
     transition-duration: 0.3s;
-    /* background-color: #43766C; */
-    /* background-color:#2C3333 !important; */
     align-items: center;
   }
   
   .button:hover .svgIcon {
-    /* width: 20px; */
     transition-duration: 0.3s;
     transform: translateY(-200%);
   }
@@ -102,7 +85,6 @@
     bottom: -20px;
     content: "Back to Top";
     color: white;
-    /* transition-duration: .3s; */
     font-size: 0px;
   }
   
@@ -110,7 +92,6 @@
     font-size: 15px;
     opacity: 1;
     bottom: unset;
-    /* transform: translateY(-30px); */
     transition-duration: 0.3s;
   }
   .buttontotop{
@@ -124,14 +105,11 @@
     justify-content: space-around !important;
   }
   .btn-contact-page {
-    /* background-color: #F8FAE5 !important; */
     color: #CBE4DE;
-    /* color: #76453B; */
     height: 50px;
     width: 50px;
     font-size: large;
     margin: 5%;
-    /* box-shadow: 0px 0px 0px 2px #F8FAE5; */
     box-shadow: 0px 0px 0px 2px #CBE4DE;
     transition-duration: 0.3s;
     animation: buttonMovement 3s;
@@ -154,7 +132,6 @@
     }
   }
   .line4{
-    /* border-top: 3px solid #F8FAE5; */
     border-top: 3px solid #CBE4DE;
     width: 220px;
     display: inline-flex;
