--- a/src/workExperience.css
+++ b/src/workExperience.css
@@ -1,6 +1,5 @@
 .experience{
     padding-top: 5%;
-    /* background-color: #2E4F4F !important; */
 }
 .experience h1{
     animation: headingMovement 3s;
@@ -12,6 +11,11 @@
     display: flex;
     justify-content: space-around;
     margin-top: 5%;
+    /* margin-right: 20%; */
+}
+.col{
+  align-items: center;
+  display: contents;
 }
 .cardE{
     border: solid;
@@ -46,8 +50,6 @@
 }
 
 .line3{
-    /* border-top: 3px solid #76453B; */
-    /* border-top: 3px solid #CBE4DE; */
     width: 220px;
     display: inline-flex;
     justify-content: center;
